parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    as
    assert
    at
    class
    continue
    del
    except
    finally
    from
    global
    import
    is
    lambda
    left_brace
    nonlocal
    pass
    period
    raise
    right_brace
    semicolon
    try
    with
    yield

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement -> block_statement
Rule 3     block_statement -> header newline inner_statement_list backspace
Rule 4     block_statement -> header newline inner_statement_list
Rule 5     block_statement -> empty
Rule 6     header -> defined_function
Rule 7     header -> conditional_statement
Rule 8     header -> repetitive_statement
Rule 9     defined_function -> def identifier left_parenthesis parameter right_parenthesis colon
Rule 10    parameter -> identifier
Rule 11    parameter -> parameter comma identifier
Rule 12    parameter -> empty
Rule 13    conditional_statement -> if boolean_expression colon
Rule 14    conditional_statement -> if boolean colon
Rule 15    conditional_statement -> elif boolean_expression colon
Rule 16    conditional_statement -> elif boolean colon
Rule 17    conditional_statement -> else colon
Rule 18    repetitive_statement -> for identifier in identifier colon
Rule 19    repetitive_statement -> while boolean_expression colon
Rule 20    repetitive_statement -> while boolean colon
Rule 21    inner_statement_list -> inner_statement newline
Rule 22    inner_statement_list -> inner_statement
Rule 23    inner_statement_list -> inner_statement_list inner_statement newline
Rule 24    inner_statement_list -> inner_statement_list inner_statement
Rule 25    inner_statement -> identation statement
Rule 26    inner_statement -> identation inner_statement
Rule 27    statement_list -> statement newline
Rule 28    statement_list -> statement
Rule 29    statement_list -> statement_list statement newline
Rule 30    statement_list -> statement_list statement
Rule 31    statement_list -> empty
Rule 32    statement -> assign_value
Rule 33    assign_value -> identifier assign_operator value
Rule 34    assign_operator -> assign
Rule 35    assign_operator -> update
Rule 36    update -> increment
Rule 37    update -> decrement
Rule 38    update -> self_product
Rule 39    update -> self_division
Rule 40    update -> self_integer_division
Rule 41    update -> self_module
Rule 42    update -> self_power
Rule 43    value -> number
Rule 44    number -> float
Rule 45    number -> integer
Rule 46    number -> identifier
Rule 47    value -> boolean
Rule 48    boolean -> True
Rule 49    boolean -> False
Rule 50    boolean -> identifier
Rule 51    value -> text
Rule 52    text -> string
Rule 53    text -> formatted_string
Rule 54    text -> identifier
Rule 55    formatted_string -> text module left_parenthesis element right_parenthesis
Rule 56    value -> expression
Rule 57    expression -> arithmetic_expression
Rule 58    arithmetic_expression -> number arithmetic_operator number
Rule 59    arithmetic_expression -> arithmetic_expression arithmetic_operator number
Rule 60    arithmetic_operator -> plus
Rule 61    arithmetic_operator -> minus
Rule 62    arithmetic_operator -> product
Rule 63    arithmetic_operator -> division
Rule 64    arithmetic_operator -> integer_division
Rule 65    arithmetic_operator -> module
Rule 66    arithmetic_operator -> power
Rule 67    expression -> boolean_expression
Rule 68    boolean_expression -> number relational_operator number
Rule 69    boolean_expression -> arithmetic_expression relational_operator number
Rule 70    boolean_expression -> number relational_operator arithmetic_expression
Rule 71    boolean_expression -> arithmetic_expression relational_operator arithmetic_expression
Rule 72    boolean_expression -> boolean boolean_operator boolean
Rule 73    boolean_expression -> not boolean
Rule 74    boolean_expression -> not boolean_expression
Rule 75    boolean_expression -> boolean_expression boolean_operator boolean
Rule 76    boolean_expression -> boolean_expression relational_operator number
Rule 77    boolean_expression -> boolean_expression relational_operator arithmetic_expression
Rule 78    relational_operator -> equals
Rule 79    relational_operator -> non_equal
Rule 80    relational_operator -> less
Rule 81    relational_operator -> greater
Rule 82    relational_operator -> less_equal
Rule 83    relational_operator -> greater_equal
Rule 84    boolean_operator -> and
Rule 85    boolean_operator -> or
Rule 86    expression -> string_concatenation
Rule 87    string_concatenation -> text plus text
Rule 88    string_concatenation -> string_concatenation plus text
Rule 89    value -> list
Rule 90    value -> function_call
Rule 91    value -> None
Rule 92    list -> left_bracket element right_bracket
Rule 93    element -> value
Rule 94    element -> element comma value
Rule 95    statement -> function_call
Rule 96    function_call -> identifier left_parenthesis argument right_parenthesis
Rule 97    argument -> value
Rule 98    argument -> argument comma value
Rule 99    argument -> empty
Rule 100   statement -> return value
Rule 101   statement -> break
Rule 102   empty -> <empty>

Terminals, with rules where they appear

False                : 49
None                 : 91
True                 : 48
and                  : 84
as                   : 
assert               : 
assign               : 34
at                   : 
backspace            : 3
break                : 101
class                : 
colon                : 9 13 14 15 16 17 18 19 20
comma                : 11 94 98
continue             : 
decrement            : 37
def                  : 9
del                  : 
division             : 63
elif                 : 15 16
else                 : 17
equals               : 78
error                : 
except               : 
finally              : 
float                : 44
for                  : 18
from                 : 
global               : 
greater              : 81
greater_equal        : 83
identation           : 25 26
identifier           : 9 10 11 18 18 33 46 50 54 96
if                   : 13 14
import               : 
in                   : 18
increment            : 36
integer              : 45
integer_division     : 64
is                   : 
lambda               : 
left_brace           : 
left_bracket         : 92
left_parenthesis     : 9 55 96
less                 : 80
less_equal           : 82
minus                : 61
module               : 55 65
newline              : 3 4 21 23 27 29
non_equal            : 79
nonlocal             : 
not                  : 73 74
or                   : 85
pass                 : 
period               : 
plus                 : 60 87 88
power                : 66
product              : 62
raise                : 
return               : 100
right_brace          : 
right_bracket        : 92
right_parenthesis    : 9 55 96
self_division        : 39
self_integer_division : 40
self_module          : 41
self_power           : 42
self_product         : 38
semicolon            : 
string               : 52
try                  : 
while                : 19 20
with                 : 
yield                : 

Nonterminals, with rules where they appear

argument             : 96 98
arithmetic_expression : 57 59 69 70 71 71 77
arithmetic_operator  : 58 59
assign_operator      : 33
assign_value         : 32
block_statement      : 2
boolean              : 14 16 20 47 72 72 73 75
boolean_expression   : 13 15 19 67 74 75 76 77
boolean_operator     : 72 75
conditional_statement : 7
defined_function     : 6
element              : 55 92 94
empty                : 5 12 31 99
expression           : 56
formatted_string     : 53
function_call        : 90 95
header               : 3 4
inner_statement      : 21 22 23 24 26
inner_statement_list : 3 4 23 24
list                 : 89
number               : 43 58 58 59 68 68 69 70 76
parameter            : 9 11
program              : 0
relational_operator  : 68 69 70 71 76 77
repetitive_statement : 8
statement            : 25 27 28 29 30
statement_list       : 1 29 30
string_concatenation : 86 88
text                 : 51 55 87 87 88
update               : 35
value                : 33 93 94 97 98 100

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (27) statement_list -> . statement newline
    (28) statement_list -> . statement
    (29) statement_list -> . statement_list statement newline
    (30) statement_list -> . statement_list statement
    (31) statement_list -> . empty
    (2) statement -> . block_statement
    (32) statement -> . assign_value
    (95) statement -> . function_call
    (100) statement -> . return value
    (101) statement -> . break
    (102) empty -> .
    (3) block_statement -> . header newline inner_statement_list backspace
    (4) block_statement -> . header newline inner_statement_list
    (5) block_statement -> . empty
    (33) assign_value -> . identifier assign_operator value
    (96) function_call -> . identifier left_parenthesis argument right_parenthesis
    (6) header -> . defined_function
    (7) header -> . conditional_statement
    (8) header -> . repetitive_statement
    (9) defined_function -> . def identifier left_parenthesis parameter right_parenthesis colon
    (13) conditional_statement -> . if boolean_expression colon
    (14) conditional_statement -> . if boolean colon
    (15) conditional_statement -> . elif boolean_expression colon
    (16) conditional_statement -> . elif boolean colon
    (17) conditional_statement -> . else colon
    (18) repetitive_statement -> . for identifier in identifier colon
    (19) repetitive_statement -> . while boolean_expression colon
    (20) repetitive_statement -> . while boolean colon

  ! shift/reduce conflict for return resolved as shift
  ! shift/reduce conflict for break resolved as shift
  ! shift/reduce conflict for identifier resolved as shift
  ! shift/reduce conflict for def resolved as shift
  ! shift/reduce conflict for if resolved as shift
  ! shift/reduce conflict for elif resolved as shift
  ! shift/reduce conflict for else resolved as shift
  ! shift/reduce conflict for for resolved as shift
  ! shift/reduce conflict for while resolved as shift
    return          shift and go to state 8
    break           shift and go to state 9
    newline         reduce using rule 102 (empty -> .)
    $end            reduce using rule 102 (empty -> .)
    identifier      shift and go to state 11
    def             shift and go to state 15
    if              shift and go to state 16
    elif            shift and go to state 17
    else            shift and go to state 18
    for             shift and go to state 19
    while           shift and go to state 20

  ! return          [ reduce using rule 102 (empty -> .) ]
  ! break           [ reduce using rule 102 (empty -> .) ]
  ! identifier      [ reduce using rule 102 (empty -> .) ]
  ! def             [ reduce using rule 102 (empty -> .) ]
  ! if              [ reduce using rule 102 (empty -> .) ]
  ! elif            [ reduce using rule 102 (empty -> .) ]
  ! else            [ reduce using rule 102 (empty -> .) ]
  ! for             [ reduce using rule 102 (empty -> .) ]
  ! while           [ reduce using rule 102 (empty -> .) ]

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    empty                          shift and go to state 4
    block_statement                shift and go to state 5
    assign_value                   shift and go to state 6
    function_call                  shift and go to state 7
    header                         shift and go to state 10
    defined_function               shift and go to state 12
    conditional_statement          shift and go to state 13
    repetitive_statement           shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (29) statement_list -> statement_list . statement newline
    (30) statement_list -> statement_list . statement
    (2) statement -> . block_statement
    (32) statement -> . assign_value
    (95) statement -> . function_call
    (100) statement -> . return value
    (101) statement -> . break
    (3) block_statement -> . header newline inner_statement_list backspace
    (4) block_statement -> . header newline inner_statement_list
    (5) block_statement -> . empty
    (33) assign_value -> . identifier assign_operator value
    (96) function_call -> . identifier left_parenthesis argument right_parenthesis
    (6) header -> . defined_function
    (7) header -> . conditional_statement
    (8) header -> . repetitive_statement
    (102) empty -> .
    (9) defined_function -> . def identifier left_parenthesis parameter right_parenthesis colon
    (13) conditional_statement -> . if boolean_expression colon
    (14) conditional_statement -> . if boolean colon
    (15) conditional_statement -> . elif boolean_expression colon
    (16) conditional_statement -> . elif boolean colon
    (17) conditional_statement -> . else colon
    (18) repetitive_statement -> . for identifier in identifier colon
    (19) repetitive_statement -> . while boolean_expression colon
    (20) repetitive_statement -> . while boolean colon

  ! shift/reduce conflict for return resolved as shift
  ! shift/reduce conflict for break resolved as shift
  ! shift/reduce conflict for identifier resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 1 (program -> statement_list .)
  ! shift/reduce conflict for def resolved as shift
  ! shift/reduce conflict for if resolved as shift
  ! shift/reduce conflict for elif resolved as shift
  ! shift/reduce conflict for else resolved as shift
  ! shift/reduce conflict for for resolved as shift
  ! shift/reduce conflict for while resolved as shift
    $end            reduce using rule 1 (program -> statement_list .)
    return          shift and go to state 8
    break           shift and go to state 9
    identifier      shift and go to state 11
    newline         reduce using rule 102 (empty -> .)
    def             shift and go to state 15
    if              shift and go to state 16
    elif            shift and go to state 17
    else            shift and go to state 18
    for             shift and go to state 19
    while           shift and go to state 20

  ! return          [ reduce using rule 102 (empty -> .) ]
  ! break           [ reduce using rule 102 (empty -> .) ]
  ! identifier      [ reduce using rule 102 (empty -> .) ]
  ! def             [ reduce using rule 102 (empty -> .) ]
  ! if              [ reduce using rule 102 (empty -> .) ]
  ! elif            [ reduce using rule 102 (empty -> .) ]
  ! else            [ reduce using rule 102 (empty -> .) ]
  ! for             [ reduce using rule 102 (empty -> .) ]
  ! while           [ reduce using rule 102 (empty -> .) ]
  ! $end            [ reduce using rule 102 (empty -> .) ]

    statement                      shift and go to state 21
    block_statement                shift and go to state 5
    assign_value                   shift and go to state 6
    function_call                  shift and go to state 7
    header                         shift and go to state 10
    empty                          shift and go to state 22
    defined_function               shift and go to state 12
    conditional_statement          shift and go to state 13
    repetitive_statement           shift and go to state 14

state 3

    (27) statement_list -> statement . newline
    (28) statement_list -> statement .

  ! shift/reduce conflict for newline resolved as shift
    newline         shift and go to state 23
    return          reduce using rule 28 (statement_list -> statement .)
    break           reduce using rule 28 (statement_list -> statement .)
    identifier      reduce using rule 28 (statement_list -> statement .)
    def             reduce using rule 28 (statement_list -> statement .)
    if              reduce using rule 28 (statement_list -> statement .)
    elif            reduce using rule 28 (statement_list -> statement .)
    else            reduce using rule 28 (statement_list -> statement .)
    for             reduce using rule 28 (statement_list -> statement .)
    while           reduce using rule 28 (statement_list -> statement .)
    $end            reduce using rule 28 (statement_list -> statement .)

  ! newline         [ reduce using rule 28 (statement_list -> statement .) ]


state 4

    (31) statement_list -> empty .
    (5) block_statement -> empty .

  ! reduce/reduce conflict for newline resolved using rule 5 (block_statement -> empty .)
  ! reduce/reduce conflict for return resolved using rule 5 (block_statement -> empty .)
  ! reduce/reduce conflict for break resolved using rule 5 (block_statement -> empty .)
  ! reduce/reduce conflict for identifier resolved using rule 5 (block_statement -> empty .)
  ! reduce/reduce conflict for def resolved using rule 5 (block_statement -> empty .)
  ! reduce/reduce conflict for if resolved using rule 5 (block_statement -> empty .)
  ! reduce/reduce conflict for elif resolved using rule 5 (block_statement -> empty .)
  ! reduce/reduce conflict for else resolved using rule 5 (block_statement -> empty .)
  ! reduce/reduce conflict for for resolved using rule 5 (block_statement -> empty .)
  ! reduce/reduce conflict for while resolved using rule 5 (block_statement -> empty .)
  ! reduce/reduce conflict for $end resolved using rule 5 (block_statement -> empty .)
    newline         reduce using rule 5 (block_statement -> empty .)
    return          reduce using rule 5 (block_statement -> empty .)
    break           reduce using rule 5 (block_statement -> empty .)
    identifier      reduce using rule 5 (block_statement -> empty .)
    def             reduce using rule 5 (block_statement -> empty .)
    if              reduce using rule 5 (block_statement -> empty .)
    elif            reduce using rule 5 (block_statement -> empty .)
    else            reduce using rule 5 (block_statement -> empty .)
    for             reduce using rule 5 (block_statement -> empty .)
    while           reduce using rule 5 (block_statement -> empty .)
    $end            reduce using rule 5 (block_statement -> empty .)

  ! return          [ reduce using rule 31 (statement_list -> empty .) ]
  ! break           [ reduce using rule 31 (statement_list -> empty .) ]
  ! identifier      [ reduce using rule 31 (statement_list -> empty .) ]
  ! def             [ reduce using rule 31 (statement_list -> empty .) ]
  ! if              [ reduce using rule 31 (statement_list -> empty .) ]
  ! elif            [ reduce using rule 31 (statement_list -> empty .) ]
  ! else            [ reduce using rule 31 (statement_list -> empty .) ]
  ! for             [ reduce using rule 31 (statement_list -> empty .) ]
  ! while           [ reduce using rule 31 (statement_list -> empty .) ]
  ! newline         [ reduce using rule 31 (statement_list -> empty .) ]
  ! $end            [ reduce using rule 31 (statement_list -> empty .) ]


state 5

    (2) statement -> block_statement .

    newline         reduce using rule 2 (statement -> block_statement .)
    return          reduce using rule 2 (statement -> block_statement .)
    break           reduce using rule 2 (statement -> block_statement .)
    identifier      reduce using rule 2 (statement -> block_statement .)
    def             reduce using rule 2 (statement -> block_statement .)
    if              reduce using rule 2 (statement -> block_statement .)
    elif            reduce using rule 2 (statement -> block_statement .)
    else            reduce using rule 2 (statement -> block_statement .)
    for             reduce using rule 2 (statement -> block_statement .)
    while           reduce using rule 2 (statement -> block_statement .)
    $end            reduce using rule 2 (statement -> block_statement .)
    backspace       reduce using rule 2 (statement -> block_statement .)
    identation      reduce using rule 2 (statement -> block_statement .)


state 6

    (32) statement -> assign_value .

    newline         reduce using rule 32 (statement -> assign_value .)
    return          reduce using rule 32 (statement -> assign_value .)
    break           reduce using rule 32 (statement -> assign_value .)
    identifier      reduce using rule 32 (statement -> assign_value .)
    def             reduce using rule 32 (statement -> assign_value .)
    if              reduce using rule 32 (statement -> assign_value .)
    elif            reduce using rule 32 (statement -> assign_value .)
    else            reduce using rule 32 (statement -> assign_value .)
    for             reduce using rule 32 (statement -> assign_value .)
    while           reduce using rule 32 (statement -> assign_value .)
    $end            reduce using rule 32 (statement -> assign_value .)
    backspace       reduce using rule 32 (statement -> assign_value .)
    identation      reduce using rule 32 (statement -> assign_value .)


state 7

    (95) statement -> function_call .
